# Spicely-flutter_openim_sdk_ffi

./: README.md  ffigen.yaml  open_core.yaml  open_im.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  utils.cpp
ios/: flutter_openim_sdk_ffi.podspec
lib/: flutter_openim_sdk_ffi.dart  flutter_openim_sdk_ffi_bindings_generated.dart  openim_sdk_ffi_bindings_generated.dart
lib/src/: logger.dart  openim.dart  openim_error.dart  openim_listener.dart  openim_manager.dart  utils.dart
lib/src/callback/: callback.dart
lib/src/enum/: conversation_type.dart  group_at_type.dart  group_role_level.dart  group_type.dart  group_verification.dart  im_platform.dart  listener_type.dart  message_status.dart  message_type.dart  sdk_error_code.dart
lib/src/extension/: extension.dart
lib/src/listener/: user_listener.dart  (+12 more)
linux/: CMakeLists.txt
macos/: flutter_openim_sdk_ffi.podspec
macos/Classes/: flutter_openim_sdk_ffi.c
src/: CMakeLists.txt  Makefile  flutter_openim_sdk_ffi.c  flutter_openim_sdk_ffi.h  openim_sdk_ffi.h
windows/: CMakeLists.txt
(+24 files in other folders)
